--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "cross-env NODE_ENV=development nodemon server/server.js",
     "build": "cross-env NODE_ENV=production webpack --config mjs/mjs.config.js",
     "start": "npm run build && cross-env NODE_ENV=production node server/server.js",
-     "deploy": "docker build -t doc-manager . && docker tag doc-manager manoj20002/doc-manager:latest && docker push manoj20002/doc-manager:latest"
-
+    "deploy": "docker build -t doc-manager . && docker tag doc-manager manoj20002/doc-manager:latest && docker push manoj20002/doc-manager:latest"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,6 +15,7 @@
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
     "express": "^4.21.2",
+    "framer-motion": "^12.23.12",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
